// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result should render failed component 1`] = `
<section
  className="result"
>
  <div
    className="result__logo"
  >
    <img
      alt="Угадай мелодию"
      height="83"
      src="img/melody-logo.png"
      width="186"
    />
  </div>
  <h2
    className="result__title"
  >
    Какая жалость!
  </h2>
  <p
    className="result__total result__total--fail"
  >
    У вас закончились все попытки. Ничего, повезёт в следующий раз!
  </p>
  <button
    className="replay"
    type="button"
  >
    Попробовать ещё раз
  </button>
</section>
`;

exports[`Result should render success component 1`] = `
<section
  className="result"
>
  <div
    className="result__logo"
  >
    <img
      alt="Угадай мелодию"
      height="83"
      src="img/melody-logo.png"
      width="186"
    />
  </div>
  <h2
    className="result__title"
  >
    Вы настоящий меломан!
  </h2>
  <p
    className="result__total"
  >
    Вы ответили правильно на 
    10
     вопросов и совершили 
    0
     ошибки
  </p>
  <button
    className="replay"
    type="button"
  >
    Попробовать ещё раз
  </button>
</section>
`;
